# EstyAssistant

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/api/: credentials.py  main.py  s3.py
backend/src/api/routes/: analytics.py  publish.py  templates.py
backend/src/etsy_assistant/: pipeline.py
backend/tests/: test_analytics.py  test_bulk_publish.py  test_credentials.py  test_publish_extra.py  test_s3_helpers.py  test_templates_api.py
data/: etsy_listings_export.csv
docs/: COPILOT_MAINTENANCE.md  TRACEABILITY.md
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AnalyticsDashboard.tsx  BundleGenerator.tsx  DarkModeToggle.tsx  TemplateManager.tsx
frontend/src/lib/: api.ts
infra/: README.md  bootstrap-oidc.yaml  template.yaml
scripts/: deploy-backend.sh
src/etsy_assistant/: etsy_api.py
tests/: test_bundles_ai.py  test_cli.py  test_etsy_api_web.py  test_mockup_files.py  test_perspective_deskew.py
